# brutezone

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  appveyor.yml
benchmark/: CMakeLists.txt  benchmark.h  find_timezone.c  timezone_gmt_time.c  timezone_local_time.c
generator/: CMakeLists.txt  Program.cs  brutezone.csproj  brutezone.sln  packages.config  readme.md
generator/Properties/: AssemblyInfo.cs
inc/: timezone.h  timezone_database.h  timezone_impl.h
src/: timezone.c  timezone_impl.c
test/: CMakeLists.txt  CmakeLists.txt  add_day.c  find_timezone.c  iso_time.c  secs_to_tm.c  subtract_day.c  test.h  timezone_current_local_time.c  timezone_gmt_time.c  timezone_local_time.c  timezone_localtime_isdst.c  timezone_secs_since.c  timezone_secs_since_dow.c  timezone_secs_until.c  timezone_secs_until_dow.c  tm_to_secs.c
